fix button mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -1031,7 +1031,7 @@ margin-left: -176px;
     margin-left: 20px;
     margin-top: 124px;
     overflow: hidden; /* Скрываем карточки за пределами */
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
     width: 100%;
     position: relative;
   }
@@ -1047,7 +1047,7 @@ margin-left: -176px;
   .card_mobile {
     min-width: 335px; /* Ширина карточки */
     height: 300px; /* Высота карточки */
-    background-color: #d9d9d9; /* Фон карточки */
+    background-color: #d9d9d9;
     font-family: var(--main-font);
     display: flex;
     flex-direction: column;
@@ -1056,7 +1056,7 @@ margin-left: -176px;
     padding-left: 20px;
     padding-top: 32px;
     gap: 24px;
-    margin-right: 30px; /* Отступ между карточками */
+    margin-right: 200px; /* Отступ между карточками */
     flex-shrink: 0;
   }
 
@@ -1151,6 +1151,8 @@ max-width: 20.8%;
   .carousel-controls_mobile {
     display: flex;
     padding-top: 28px;
+		justify-content: center;
+		width: 14.1%;
   }
 
   /* Кнопки навигации (стрелки) */
